--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,6 @@
 @use '@styles/colors.module' as colors;
 
 * {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
   margin: 0;
 }
 
@@ -11,6 +8,8 @@ html,
 body {
   margin: 0;
   padding: 0;
+
+  font-family: var(--nunitoSansFont);
 
   min-height: 100vh;
 
