Make cards responsive

--- a/src/components/ui/Card/Card.module.scss
+++ b/src/components/ui/Card/Card.module.scss
@@ -3,6 +3,7 @@
 .card {
     box-sizing: border-box;
     height: 200px;
+    min-width: 240px;
     width: 240px;
     display: flex;
     flex-direction: column;
