Update web client ui

--- a/src/components/ui/ProductCard/ProductCard.module.scss
+++ b/src/components/ui/ProductCard/ProductCard.module.scss
@@ -16,6 +16,12 @@
     padding: 12px;
     padding-top: 60px;
 
+    .cardTitle {
+    }
+
+    .cardDescription {
+    }
+
     .cardImage {
         position: absolute;
         width: 100%;
