--- a/src/components/ui/RightCart/RightCart.module.scss
+++ b/src/components/ui/RightCart/RightCart.module.scss
@@ -1,32 +1,38 @@
 .rightCartContent {
-  padding: 1rem;
+  padding: 2rem;
   height: 100%;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
 
-  button {
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    margin-bottom: 1rem;
-    padding: 0.5rem 1rem;
-    color: #fff;
-    background-color: #f9a826;
+  .rightCartHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-    &:first-of-type {
-      background-color: #ccc;
-      color: #333;
+    .rightCartTitle {
+      font-size: 20px;
+    }
+
+    .rightCartCloseButton {
+
     }
   }
 
-  h2 {
-    margin-bottom: 1rem;
-  }
-
   ul {
+    margin: 20px 0;
     flex: 1;
+    overflow-y: scroll;
+    overflow-x: hidden;
     list-style: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+
 
     li {
       display: flex;
@@ -35,19 +41,43 @@
       padding: 0.5rem 0;
       border-bottom: 1px solid #eee;
 
-      button {
-        background: none;
-        border: none;
-        font-size: 1rem;
-        cursor: pointer;
-        color: red;
+      .cartItemInfo {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+
+        .cartItemName {
+          width: 95%;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
+        }
       }
     }
   }
 
-  .cartSummary {
-    p {
-      margin-bottom: 0.3rem;
+  .cartFooter {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    .cartSummary {
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      border: solid 1px grey;
+      border-radius: 15px;
+
+      p {
+        margin-bottom: 0.3rem;
+      }
     }
   }
 }
+
+
+
+
+
