--- a/src/components/ui/ProductCard/ProductCard.module.scss
+++ b/src/components/ui/ProductCard/ProductCard.module.scss
@@ -16,6 +16,11 @@
     padding: 12px;
     padding-top: 60px;
 
+    &:hover {
+        cursor: pointer;
+        border: solid 2px $primary;
+    }
+
     .cardTitle {
     }
 
@@ -30,8 +35,7 @@
         display: flex;
         justify-content: center;
 
-        img {
-            width: 40%;
+        .img {
             background-color: white;
             border-radius: 100%;
             box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.08);
