--- a/src/components/ui/Header/Header.module.scss
+++ b/src/components/ui/Header/Header.module.scss
@@ -4,26 +4,40 @@
   gap: 4rem;
   background-color: #fff;
   padding: 2rem 4rem;
-}
-
-.menuToggleBtn,
-.cartToggleBtn {
-  background: none;
-  border: none;
-  font-size: 1.2rem;
-  cursor: pointer;
-  margin-right: 0.5rem;
-}
-
-.searchBar {
-  flex: 1;
-
-  input {
-    width: 100%;
-    height: 40px;
-    padding: 0.5rem;
-    background-color: #EEEEEE;
+  
+  .menuToggleBtn,
+  .cartToggleBtn {
+    background: none;
     border: none;
-    border-radius: 8px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    margin-right: 0.5rem;
+  }
+  
+  .searchBar {
+    flex: 1;
+  
+    input {
+      width: 100%;
+      height: 40px;
+      padding: 0.5rem;
+      background-color: #EEEEEE;
+      border: none;
+      border-radius: 8px;
+    }
+  }
+
+  &.mobileHeader {
+    padding: 0.5rem;
+    gap: 0.5rem;
+
+    .menuToggleBtn,
+    .cartToggleBtn {
+      flex: 1;
+    }
+    .searchBar {
+      flex: 2;
+    }
   }
 }
+
