--- a/src/app/index.module.scss
+++ b/src/app/index.module.scss
@@ -13,6 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-bottom: 0.5rem;
 
   .subcategoryListBoxWrapper {
     width: 50%;
