--- a/src/components/ui/Header/Header.module.scss
+++ b/src/components/ui/Header/Header.module.scss
@@ -4,7 +4,7 @@
   gap: 4rem;
   background-color: #fff;
   padding: 2rem 4rem;
-  
+
   .menuToggleBtn,
   .cartToggleBtn {
     background: none;
@@ -13,31 +13,36 @@
     cursor: pointer;
     margin-right: 0.5rem;
   }
-  
-  .searchBar {
-    flex: 1;
-  
-    input {
-      width: 100%;
-      height: 40px;
-      padding: 0.5rem;
-      background-color: #EEEEEE;
-      border: none;
-      border-radius: 8px;
-    }
-  }
+}
 
-  &.mobileHeader {
+.searchBar {
+  flex: 1;
+
+  input {
+    width: 100%;
+    height: 40px;
     padding: 0.5rem;
-    gap: 0.5rem;
+    background-color: #EEEEEE;
+    border: none;
+    border-radius: 8px;
+  }
+}
 
-    .menuToggleBtn,
-    .cartToggleBtn {
-      flex: 1;
-    }
-    .searchBar {
-      flex: 2;
-    }
+.rightButtons {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.mobileHeader {
+  padding: 0.5rem;
+  gap: 0.5rem;
+
+  .menuToggleBtn,
+  .cartToggleBtn {
+    flex: 1;
+  }
+  .searchBar {
+    flex: 2;
   }
 }
 
