--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -10,6 +10,7 @@ $grey_placeholder: #979797;
 $grey_hover: #f5f5f5;
 $grey_light: #ececec;
 $grey_border: #e2e2e2;
+$white: #ffffff;
 
 $chip_orange_text: #f4a833;
 $chip_orange_background: #fff2d7;
