--- a/src/components/ui/CategoryButton/CategoryButton.module.scss
+++ b/src/components/ui/CategoryButton/CategoryButton.module.scss
@@ -2,6 +2,7 @@
 
 .buttonContainer {
   width: 100%;
+  height: 100%;
 
   .categoryButton {
     width: 100%;
@@ -17,7 +18,7 @@
     transition: transform ease-in 200ms;
     position: relative;
     color: black;
-    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.08);
 
     &.selected {
       background-color: $primary!important;
@@ -28,8 +29,8 @@
       left: 15px;
       top: 20px;
       transform: translateY(-5%);
-      height: 60px;
-      width: 57px;
+      height: 30px;
+      width: 28px;
 
       > img {
         height: 100%;
@@ -45,7 +46,7 @@
     .categoryLabel {
       text-align: center;
       transform: translateY(-40%);
-      font-size: 12px;
+      font-size: 10px;
       font-weight: 900;
     }
   }
