--- a/src/components/ui/IconButton/IconButton.module.scss
+++ b/src/components/ui/IconButton/IconButton.module.scss
@@ -4,9 +4,14 @@
   background-color: $primary;
   border: none;
   cursor: pointer;
-  padding: 8px;
+  padding: 4px;
   display: flex;
   align-items: center;
+
+  svg {
+    width: 15px;
+    height: 15px;
+  }
 
   &.square {
     border-radius: 10%;
@@ -26,9 +31,9 @@
   }
 
   &.small {
-    padding: 5px;
-    width: 25px;
-    height: 25px;
+    padding: 2px;
+    width: 10px;
+    height: 10px;
   }
 
   &.primary {
