--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,6 +21,10 @@ body {
 
   min-height: 100vh;
 
+  width: 100%;
+  height: 100%;
+
+  scrollbar-width: thin;
   // background-color: colors.$grey_main_background;
 }
 
@@ -51,3 +55,25 @@ $primary-color: #f9a826;
 $white: #fff;
 $border-radius: 8px;
 $transition-speed: 0.3s;
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $primary-color; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #F6C789; 
+}
