--- a/src/components/ui/ProductCard/ProductCard.module.scss
+++ b/src/components/ui/ProductCard/ProductCard.module.scss
@@ -1,5 +1,3 @@
-@import '@styles/colors.module';
-
 .card {
     box-sizing: border-box;
     height: 100px;
@@ -17,10 +15,19 @@
     margin-top: 40px;
     padding-top: 15px;
     margin-bottom: 5px;
-
+    transition: all 0.2s ease; /* Ajoute une transition fluide pour les changements visuels */
+  
     &:hover {
         cursor: pointer;
-        border: solid 1px $primary;
+        border: solid 1px black;
+    }
+
+    /* Style lorsque l'élément est en train d'être glissé */
+    &.dragging {
+        opacity: 0.7; /* Rendre l'élément légèrement transparent */
+        transform: scale(1.05); /* Agrandir légèrement l'élément */
+        box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.15); /* Augmenter l'ombre portée */
+        background-color: #f0f0f0; /* Changer le fond pour indiquer que l'élément est glissé */
     }
 
     .cardImage {
