--- a/src/components/ui/Bin/Bin.module.scss
+++ b/src/components/ui/Bin/Bin.module.scss
@@ -2,12 +2,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: red;
-    width: 8vw;
+    background-color: #fc6464;
+    width: 10vw;
     height: 19vh;
-    border-radius: 10%;
     position: absolute;
-    bottom: 10px;
+    bottom: 0px;
     left: 50%;
     transform: translateX(-50%);
   }
@@ -18,6 +17,5 @@
 
   .binIcon {
     color: white;
-    font-size: 2rem; /* Ajustez la taille si nécessaire */
   }
   
