--- a/src/components/ui/RightCart/RightCart.module.scss
+++ b/src/components/ui/RightCart/RightCart.module.scss
@@ -1,3 +1,30 @@
+.itemClone {
+  position: fixed;
+  z-index: 1000;
+  pointer-events: none;
+  background-color: var(--white, #fff);
+  border: 1px solid #eee;
+  border-radius: 5px;
+  padding: 5px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+  font-size: 10px;
+  color: var(--black, #000);
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+
+  .itemDetailsClone {
+    display: flex;
+    align-items: center;
+
+    span {
+      font-weight: bold;
+      color: var(--orange, #f8b03d);
+    }
+  }
+}
+
+
 .rightCartContent {
   padding: 10px;
   height: 100%;
