--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -1,6 +1,9 @@
 $primary_dark: #e7aa57;
 $primary: #FCB85F;
 $primary_light: #F6C789;
+$secondary: #7ED6FF;
+$secondary_dark: #5da2c2;
+$secondary_light: #99dbfa;
 $title_background: #e9e2ff;
 $textDark: #000;
 $textLight: #7d7d7d;
