--- a/src/components/ui/ProductCard/ProductCard.module.scss
+++ b/src/components/ui/ProductCard/ProductCard.module.scss
@@ -1,3 +1,5 @@
+@import '@styles/colors.module';
+
 .cardClone {
     box-sizing: border-box;
     height: 100px;
@@ -39,6 +41,14 @@
     padding-top: 15px;
     margin-bottom: 5px;
     transition: all 0.2s ease; /* Ajoute une transition fluide pour les changements visuels */
+
+    .sharedIcon {
+        color: $primary;
+        position: absolute;
+        right: 5px;
+        top: 0px;
+        width: 15px;
+    }
   
     &:hover {
         cursor: pointer;
@@ -97,6 +107,27 @@
         .cardPrice {
             font-weight: bold;
             font-size: 13px;
+        }
+
+        .cardOldPrice {
+            color: $red_primary;
+            text-decoration: line-through;
+        }
+
+        .cardNewPrice {
+            color: $primary;
+            font-size: 10px;
+        }
+
+        .sharedButton {
+            width: 23px;
+            height: 23px;
+            justify-content: center;
+            .sharedLabel {
+                color: white;
+                font-size: 8px;
+                font-weight: bold;
+            }
         }
     }
 }
