--- a/src/components/ui/RightCart/RightCart.module.scss
+++ b/src/components/ui/RightCart/RightCart.module.scss
@@ -1,3 +1,5 @@
+@import '@styles/colors.module';
+
 .itemClone {
   position: fixed;
   z-index: 1000;
@@ -34,7 +36,7 @@
   align-items: center;
   overflow-y: auto;
   border-radius: 25px;
-  box-shadow: -10px 5px 10px -5px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 13px 23px 10px rgba(0, 0, 0, 0.08);
   gap: 10px;
 
   .rightCartHeader {
@@ -57,10 +59,14 @@
 
     .cartItem {
       display: flex;
-      align-items: center;
+      flex-direction: column;
+      justify-content: center;
       background-color: var(--white);
-      gap: 5px;
       border-bottom: 1px solid #eee;
+
+      .itemLine {
+        width: 100%;
+      }
 
       .itemDetails {
         flex: 1;
@@ -70,6 +76,21 @@
         font-size: 10px;
         padding: 5px 0px;
         overflow-x: hidden;
+
+        .sharedIcon {
+          color: $primary;
+          width: 15px;
+          height: 12px;
+        }
+
+        .itemSharedWithLabel {
+          font-size: 10px;
+        }
+
+        .itemSharedLabel {
+          color: $primary;
+          font-weight: bold;
+        }
       }
 
       .itemInfo {
@@ -102,6 +123,11 @@
         width: 30%;
         text-align: right;
         padding-right: 2px;
+      }
+      
+      .itemPriceShared {
+        color: $red_primary;
+        text-decoration: line-through;
       }
 
       .deleteButton {
