--- a/src/components/ui/TableTerritory/TableTerritory.module.scss
+++ b/src/components/ui/TableTerritory/TableTerritory.module.scss
@@ -1,6 +1,7 @@
 @import '@styles/colors.module';
 
 .tableTerritoryContainer {
+  position: relative;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -20,7 +21,79 @@
       flex-wrap: wrap;
       gap: 25px;
       overflow-y: auto;
-      height: 70%;
+      height: 65%;
+    }
+  }
+
+  .modaleOpenned {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+
+  .modale {
+    position: absolute;
+    left: 27%;
+    top: 12%;
+    width: 46%;
+    height: 76%;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 10px -5px 10px 5px rgba(0, 0, 0, 0.08);
+
+    .modaleContent {
+      position: relative;
+      .closeButton {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+      }
+
+      .modaleBody {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+        padding: 10px;
+        h1 {
+          font-size: 20px;
+          text-align: center;
+        }
+        h2 {
+          font-weight: 400;
+          font-size: 15px;
+          text-align: center;
+        }
+        .shareZone {
+          width: 70%;
+          display: flex;
+          justify-content: space-between;
+          flex-wrap: wrap;
+          gap: 12px;
+          .sharedButton {
+            width: 45%;
+          }
+        }
+        p {
+          font-size: 10px;
+        }
+        .priceLine {
+          display: flex;
+          justify-content: center;
+          align-items: end;
+          gap: 2px;
+          .oldPrice {
+            font-size: 15px;
+            font-weight: bold;
+            color: $red_primary;
+            text-decoration: line-through;
+          }
+          .newPrice {
+            font-size: 15px;
+            font-weight: bold;
+            color: $primary;
+          }
+        }
+      }
     }
   }
 }
