--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -24,7 +24,6 @@ body {
   width: 100%;
   height: 100%;
 
-  scrollbar-width: thin;
   // background-color: colors.$grey_main_background;
 }
 
@@ -59,6 +58,8 @@ $transition-speed: 0.3s;
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
+  scrollbar-width: thin;
 }
 
 /* Track */
